Update documentation and constants